# fuel-price-lv

./: .gitignore  CLAUDE.md  PROJECTS.md  README.md  collect_prices.py  generate_report.py  pyproject.toml  requirements.txt
.github/workflows/: daily_prices.yml
data/: price_history.csv  sample_excel_bad_price_v1.xlsx  sample_excel_missing_column_v1.xlsx  sample_excel_prices_v1.xlsx  sample_missing_column.csv  sample_prices.csv  sample_raw_bad_price_v1.csv  sample_raw_dirty_prices_v1.csv  sample_raw_missing_column_v1.csv  sample_raw_prices_v1.csv  source_catalog.json
docs/: constitution.md  google_apps_script.js
output/: _debug_circlek_stations.html  diesel_rīga_top2.csv  diesel_rīga_top2.json  diesel_summary_by_city.csv  diesel_top10.csv  diesel_top10.json  diesel_top2.json  diesel_top3.csv  diesel_top3.json  diesel_top5.csv  diesel_top5.json  petrol_95_summary_by_city.csv  petrol_95_top10.csv  petrol_95_top10.json  petrol_95_top15.csv  petrol_95_top15.json  petrol_95_top5.csv  petrol_95_top5.json
output/cache/: circlek_latest.csv
output/history/: 2026-03-27_230212_circlek_live_neste_live_diesel.csv
specs/multi-source-conflict-handling/: plan.md  spec.md  tasks.md
src/fuel_price_lv/: cli.py  main.py  net.py  reporting.py  services.py  source_catalog.py  xlsx_report.py
src/fuel_price_lv.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_circlek_importer.py  test_importers.py  test_main.py  test_multi_source.py  test_neste_importer.py  test_net.py  test_packaging.py  test_reporting_workflow.py  test_services.py  test_source_catalog.py  test_virsi_importer.py
(+10 files in other folders)
