[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fuel-price-lv"
version = "0.1.0"
description = "CLI tool for filtering and reporting fuel prices in Latvia."
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
fuel-price-lv = "fuel_price_lv.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
